# YAP

./: CMakeLists.txt
data/: d4pi.pdl  set_parities.h
examples/: CMakeLists.txt
examples/bat_gen/: CMakeLists.txt  a1_integrals.cxx  bat_fit.cxx  bat_fit.h  bat_fit_fractions.h  bat_gen.cxx  dkkpi.cxx  drawMassShapes.cxx  runBatFit.cxx  runBatFitFitFractions.cxx  runBatFit_4pi.cxx  runBatFit_4pi_FF.cxx  runBatGen.cxx  runFitFractions.cxx  runRootGen_4pi.cxx  runWeighEvents.cxx  tools.h
examples/bat_gen/models/: D_K0pi0pi0.h  a1.h  d3pi.h  d4pi.h  d4pi_fit.h  d4pi_scales.h  dkkpi.h
include/: Attributes.h  BowlerMassShape.h  DalitzPhspIntegral.h  DataAccessor.h  DecayTree.h  DecayTreeVectorIntegral.h  DecayingParticle.h  FourMomenta.h  FreeAmplitude.h  GounarisSakurai.h  HelicityAngles.h  ImportanceSampler.h  LorentzTransformation.h  MassShape.h  Matrix.h  MeasuredBreakupMomenta.h  Model.h  ModelIntegral.h  Particle.h  PiPiSWave.h  SmearedFlatte.h  VariableStatus.h  Vector.h  a1MassShape.h  container_utils.h
src/: Attributes.cxx  BlattWeisskopf.cxx  BowlerMassShape.cxx  BreitWigner.cxx  CMakeLists.txt  DalitzPhspIntegral.cxx  DecayTree.cxx  DecayTreeVectorIntegral.cxx  DecayingParticle.cxx  Filters.cxx  Flatte.cxx  FourMomenta.cxx  FreeAmplitude.cxx  GounarisSakurai.cxx  HelicityAngles.cxx  HelicityFormalism.cxx  ImportanceSampler.cxx  MassShape.cxx  MeasuredBreakupMomenta.cxx  Model.cxx  ModelIntegral.cxx  NonrelativisticBreitWigner.cxx  Particle.cxx  PiPiSWave.cxx  PoleMass.cxx  SmearedFlatte.cxx  ZemachSpinAmplitude.cxx  a1MassShape.cxx
test/: CMakeLists.txt  (+10 more)
(+6 files in other folders)
